--- a/lib/subtle_web/components/layouts/app.html.heex
+++ b/lib/subtle_web/components/layouts/app.html.heex
@@ -4,13 +4,13 @@
       <a href="/">
         <img src={~p"/images/logo.svg"} width="36" />
       </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
+      <p class="bg-brand/5 text-brand text-zinc-200 rounded-full px-2 font-medium leading-6">
+        An extremely subtle excercise in learning Elixir LiveView
       </p>
     </div>
   </div>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
+<main class="px-4 py-10 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
