--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,59 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+
+  #light {
+    @apply mt-8 max-w-xl mx-auto text-center;
+  }
+  #light button {
+    @apply bg-transparent mx-1 py-2 px-4 border-slate-400 border-2 rounded-lg shadow-sm transition ease-in-out duration-150 outline-none hover:bg-slate-300 disabled:opacity-50 disabled:cursor-not-allowed;
+  }
+  #light img,
+  #light svg {
+    @apply w-8;
+  }
+  #light .meter {
+    @apply flex h-12 overflow-hidden text-base bg-slate-300 rounded-lg mb-8;
+  }
+  #light .meter > span {
+    @apply flex flex-col justify-center text-slate-900 text-center whitespace-nowrap bg-yellow-300 font-bold w-0;
+    transition: width 2s ease;
+  }
+  #light form {
+    @apply mt-10;
+  }
+  #light form .temps {
+    @apply flex justify-center items-center space-y-0 space-x-10;
+  }
+  #light form .temps > div {
+    @apply flex items-center;
+  }
+  #light form .temps > div input {
+    @apply h-4 w-4 border-slate-300 text-slate-600 focus:ring-slate-500;
+  }
+  #light form .temps > div label {
+    @apply ml-2 block text-sm font-bold text-slate-700;
+  }
+  
+
+  div .guessrow {
+    @apply grid grid-cols-5 gap-x-4 max-w-xl mx-auto text-center;
+  }
+
+  div .letterbox p {
+    @apply w-14 h-14 justify-center items-baseline py-3 px-5 text-3xl font-semibold text-zinc-200 rounded-lg border-2 border-zinc-200;
+  }
+  div .letterbox p.correct {
+    @apply bg-green-600;
+  }
+  div .letterbox p.wrong_letter {
+    @apply bg-red-600;
+  }
+  div .letterbox p.wrong_position {
+    @apply bg-yellow-400;
+  }
+  div .letterbox p.none {
+    @apply bg-sky-500;
+  }
+
+
