--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -46,7 +46,7 @@
     @apply w-14 h-14 text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
   }
   div .keybox p {
-    @apply w-8 h-8 text-xl font-semibold text-center items-baseline text-zinc-200 rounded-lg border-2 border-zinc-200;
+    @apply w-8 h-8 text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
   }
   div .guessbox p.correct,
   div .keybox p.correct {
