--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -39,14 +39,14 @@
   
 
   div .guessrow {
-    @apply grid grid-cols-5 gap-x-4 max-w-xl mx-auto;
+    @apply grid grid-cols-5 justify-items-start gap-x-1 md:gap-x-2 max-w-md mx-auto;
   }
 
   div .guessbox p {
-    @apply w-14 h-14 text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
+    @apply w-12 md:w-14 h-12 md:h-14 text-2xl md:text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
   }
   div .keybox p {
-    @apply w-8 h-8 text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
+    @apply w-6 md:w-8 h-6 md:h-8 text-lg md:text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
   }
   div .guessbox p.correct,
   div .keybox p.correct {
@@ -54,7 +54,7 @@
   }
   div .guessbox p.wrong_letter,
   div .keybox p.wrong_letter {
-    @apply bg-red-600;
+    @apply bg-zinc-500;
   }
   div .guessbox p.wrong_position,
   div .keybox p.wrong_position {
