Removed clashing color

--- a/lib/subtle_web/components/layouts/app.html.heex
+++ b/lib/subtle_web/components/layouts/app.html.heex
@@ -4,7 +4,7 @@
       <a href="/">
         <img src={~p"/images/logo.svg"} width="36" />
       </a>
-      <p class="bg-brand/5 text-brand text-zinc-200 rounded-full px-2 font-medium leading-6">
+      <p class="bg-brand/5 text-zinc-200 rounded-full px-2 font-medium leading-6">
         An extremely subtle excercise in learning Elixir LiveView
       </p>
     </div>
