Added app header and changed box sizes

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -37,16 +37,30 @@
     @apply ml-2 block text-sm font-bold text-slate-700;
   }
   
+  div .app_header {
+    @apply flex px-4 py-2 mb-2 justify-between gap-x-4 border-b border-zinc-100 max-w-md mx-auto;
+  }
+  div .app_header h1 {
+    @apply text-2xl md:text-4xl font-semibold uppercase text-zinc-200
+  }
+  div .app_header .icon {
+    @apply w-6 md:w-8 h-6 md:h-8 text-zinc-200;
+  }
+
+
+  div .help_me {
+    @apply flex rounded-lg m-auto p-2 gap-x-2 bg-slate-900 whitespace-nowrap text-zinc-200;
+  }
 
   div .guessrow {
-    @apply grid grid-cols-5 justify-items-start gap-x-1 md:gap-x-2 max-w-md mx-auto;
+    @apply grid grid-cols-5 justify-items-center gap-x-1 md:gap-x-2 max-w-sm md:max-w-md mx-auto;
   }
 
   div .guessbox p {
-    @apply w-12 md:w-14 h-12 md:h-14 text-2xl md:text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
+    @apply w-14 md:w-16 h-14 md:h-16 text-2xl md:text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
   }
   div .keybox p {
-    @apply w-6 md:w-8 h-6 md:h-8 text-lg md:text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
+    @apply w-7 md:w-12 h-7 md:h-12 text-lg md:text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
   }
   div .guessbox p.correct,
   div .keybox p.correct {
@@ -84,7 +98,7 @@
     @apply text-lg font-medium text-zinc-300;
   }
   div .legend_groups {
-    @apply rounded-lg p-4 bg-slate-700/50 grid grid-flow-col auto-cols-min gap-y-2 gap-x-2;
+    @apply rounded-lg p-4 bg-slate-700/50 flex flex-wrap gap-y-2 gap-x-2;
   }
   div .legend .legend_group {
     @apply rounded-md p-2 bg-slate-700/50 grid grid-flow-row auto-rows-min gap-y-2;
@@ -104,4 +118,8 @@
   }
   div .possible_words p {
     @apply ml-2 text-base font-medium text-zinc-300;
+  }
+
+  div .help_box {
+    @apply flex rounded-lg p-4 bg-slate-700/50;
   }
