--- a/lib/subtle_web/components/layouts/app.html.heex
+++ b/lib/subtle_web/components/layouts/app.html.heex
@@ -1,16 +1,13 @@
 <header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
+  <div class="flex items-center max-w-2xl mx-auto justify-center border-zinc-100 py-1 text-xs md:text-sm">
     <div class="flex items-center gap-4">
-      <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
-      </a>
-      <p class="bg-brand/5 text-zinc-200 rounded-full px-2 font-medium leading-6">
+      <p class="bg-brand/5 text-zinc-200 rounded-full px-2 font-medium">
         An extremely subtle excercise in learning Elixir LiveView
       </p>
     </div>
   </div>
 </header>
-<main class="px-4 py-10 sm:px-6 lg:px-8">
+<main class="px-4 py-4 sm:px-6 lg:px-8">
   <div class="mx-auto max-w-2xl">
     <.flash_group flash={@flash} />
     <%= @inner_content %>
