--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -57,10 +57,10 @@
   }
 
   div .guessbox p {
-    @apply w-14 md:w-16 h-14 md:h-16 text-2xl md:text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
+    @apply w-12 md:w-16 h-12 md:h-16 text-2xl md:text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
   }
   div .keybox p {
-    @apply w-7 md:w-12 h-7 md:h-12 text-lg md:text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
+    @apply w-7 md:w-12 h-7 md:h-12 text-base sm:text-lg md:text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
   }
   div .guessbox p.correct,
   div .keybox p.correct {
@@ -89,29 +89,29 @@
 
 
   div .legend {
-    @apply rounded-lg p-4 bg-slate-700/50 grid grid-flow-row auto-rows-min gap-y-2 gap-x-2;
+    @apply flex flex-col gap-y-2 gap-x-2;
   }
   div .legend h1 {
-    @apply col-span-2 text-xl font-medium text-zinc-300;
+    @apply col-span-2 text-xl font-medium text-zinc-200;
   }
   div .legend h2 {
-    @apply text-lg font-medium text-zinc-300;
+    @apply text-lg font-medium text-zinc-200;
   }
   div .legend_groups {
-    @apply rounded-lg p-4 bg-slate-700/50 flex flex-wrap gap-y-2 gap-x-2;
+    @apply flex flex-row flex-wrap rounded-lg gap-y-3 gap-x-4;
   }
   div .legend .legend_group {
-    @apply rounded-md p-2 bg-slate-700/50 grid grid-flow-row auto-rows-min gap-y-2;
+    @apply flex flex-col grow p-2 rounded-md bg-zinc-800/70 gap-y-2;
   }
   div .legend .legend_key {
-    @apply grid grid-flow-col auto-cols-max items-center gap-x-2;
+    @apply grid grid-flow-col auto-cols-max items-center gap-x-3;
   }
   div .legend_key .desc {
     @apply text-left text-base md:text-base font-medium text-zinc-300;
   }
 
   div .possible_words {
-    @apply flex rounded-lg p-4 bg-slate-700/50 items-baseline;
+    @apply flex flex-row flex-wrap rounded-lg bg-slate-700/50 items-baseline;
   }
   div .possible_words h1 {
     @apply text-lg whitespace-nowrap font-medium text-zinc-200;
@@ -122,4 +122,30 @@
 
   div .help_box {
     @apply flex rounded-lg p-4 bg-slate-700/50;
+  }
+
+  div .give_up {
+    @apply flex flex-col flex-wrap items-center gap-y-3;
+  }
+  div .give_up h1 {
+    @apply text-2xl whitespace-nowrap font-semibold text-zinc-200;
+  }
+  div .give_up p {
+    @apply text-lg font-medium text-zinc-200;
+  }
+
+  div #settings-modal-bg {
+    @apply bg-zinc-300/50;
+  }
+  div #settings-modal-container {
+    @apply bg-slate-700;
+  }
+  div #settings-modal-close {
+    @apply text-zinc-100;
+  }
+  div #settings-modal-content {
+    @apply flex flex-col flex-wrap gap-y-10;
+  }
+  div #settings-verify-label {
+    @apply text-lg text-zinc-200;
   }
