--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -47,50 +47,71 @@
     @apply w-6 md:w-8 h-6 md:h-8 text-zinc-200;
   }
 
-
-  div .help_me {
-    @apply flex rounded-lg m-auto p-2 gap-x-2 bg-slate-900 whitespace-nowrap text-zinc-200;
+  div .gamebox {
+    @apply flex flex-row flex-nowrap rounded-lg p-4 justify-center bg-slate-700/50;
   }
+  /* the guesses */
 
+  div .guesses {
+    @apply grid grid-flow-row justify-center auto-rows-max gap-y-2 md:gap-y-4;
+  }
   div .guessrow {
     @apply grid grid-cols-5 justify-items-center gap-x-1 md:gap-x-2 max-w-sm md:max-w-md mx-auto;
   }
-
   div .guessbox p {
     @apply w-12 md:w-16 h-12 md:h-16 text-2xl md:text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
+  }
+  div .legend p.correct,
+  div .guessbox p.correct {
+    @apply bg-green-600;
+  }
+  div .legend p.wrong_l,
+  div .guessbox p.wrong_l {
+    @apply bg-zinc-500;
+  }
+  div .legend p.wrong_p,
+  div .guessbox p.wrong_p {
+    @apply bg-yellow-400;
+  }
+  div .guessbox p.none {
+    @apply bg-sky-500;
+  }
+
+  /* the key display */
+
+  div .keys_used {
+    @apply flex rounded-lg p-2 bg-slate-700/20 grid grid-flow-row auto-rows-min gap-y-2;
+  }
+  div .keysrow {
+    @apply flex flex-row flex-nowrap gap-x-2;
   }
   div .keybox p {
     @apply w-7 md:w-12 h-7 md:h-12 text-base sm:text-lg md:text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
   }
-  div .guessbox p.correct,
-  div .keybox p.correct {
-    @apply bg-green-600;
-  }
-  div .guessbox p.wrong_letter,
-  div .keybox p.wrong_letter {
-    @apply bg-zinc-500;
-  }
-  div .guessbox p.wrong_position,
-  div .keybox p.wrong_position {
-    @apply bg-yellow-400;
-  }
-  div .guessbox p.used,
+  div.legend p.used,
   div .keybox p.used {
     @apply bg-slate-400;
   }
-  div .guessbox p.unused,
+  div .legend p.unused,
   div .keybox p.unused {
     @apply bg-slate-800;
   }
-  div .guessbox p.none,
+  div .legend p.none,
   div .keybox p.none {
     @apply bg-sky-500;
   }
+
   div .bottom_row {
     @apply flex flex-row gap-x-1 md:gap-x-2;
   }
   div .bottom_row button {
-    @apply width-40 bg-slate-800 uppercase py-0 text-base h-7 md:h-12 items-center font-semibold text-zinc-200 rounded-md border border-zinc-200;
+    @apply bg-slate-800 uppercase py-0 text-base h-7 md:h-12 items-center font-semibold text-zinc-200 rounded-md border border-zinc-200;
+  }
+
+
+
+  div .help_me {
+    @apply flex rounded-lg m-auto p-2 gap-x-2 bg-slate-900 whitespace-nowrap text-zinc-200;
   }
 
   div .legend {
