--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -48,18 +48,18 @@
   }
 
   div .gamebox {
-    @apply flex flex-row flex-nowrap rounded-lg p-4 justify-center bg-slate-700/50;
+    @apply flex flex-col flex-nowrap rounded-lg p-4 justify-center bg-slate-900/90;
   }
   /* the guesses */
 
   div .guesses {
-    @apply grid grid-flow-row justify-center auto-rows-max gap-y-2 md:gap-y-4;
+    @apply grid grid-flow-row justify-center auto-rows-max gap-y-2;
   }
   div .guessrow {
     @apply grid grid-cols-5 justify-items-center gap-x-1 md:gap-x-2 max-w-sm md:max-w-md mx-auto;
   }
   div .guessbox p {
-    @apply w-12 md:w-16 h-12 md:h-16 text-2xl md:text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
+    @apply w-10 md:w-12 h-10 md:h-12 text-2xl md:text-3xl p-2 font-semibold text-center text-zinc-200 rounded-lg border-2 border-zinc-200;
   }
   div .legend p.correct,
   div .guessbox p.correct {
@@ -80,14 +80,24 @@
   /* the key display */
 
   div .keys_used {
-    @apply flex rounded-lg p-2 bg-slate-700/20 grid grid-flow-row auto-rows-min gap-y-2;
+    @apply flex mt-2 md:mt-4 flex-col flex-nowrap justify-center gap-y-2;
   }
   div .keysrow {
-    @apply flex flex-row flex-nowrap gap-x-2;
+  /*  @apply grid grid-flow-col justify-center auto-cols-max; */
+    @apply flex flex-row flex-none flex-nowrap justify-center gap-x-1;
   }
   div .keybox p {
-    @apply w-7 md:w-12 h-7 md:h-12 text-base sm:text-lg md:text-xl font-semibold text-center items-baseline text-zinc-200 rounded-md border border-zinc-200;
+    @apply flex-none md:py-3 w-7 md:w-12 h-8 md:h-14 text-base sm:text-lg md:text-xl font-semibold text-center text-zinc-200 rounded-md border border-zinc-200;
   }
+  div .bottom_row {
+    /*@apply grid grid-flow-col justify-center auto-cols-max;*/
+    @apply flex flex-row justify-center gap-x-1;
+  }
+  div .bottom_row button {
+    @apply basis-20 bg-slate-800 uppercase py-0 text-base h-8 md:h-14 items-center font-semibold text-zinc-200 rounded-md border border-zinc-200;
+  }
+
+
   div.legend p.used,
   div .keybox p.used {
     @apply bg-slate-400;
@@ -101,12 +111,6 @@
     @apply bg-sky-500;
   }
 
-  div .bottom_row {
-    @apply flex flex-row gap-x-1 md:gap-x-2;
-  }
-  div .bottom_row button {
-    @apply bg-slate-800 uppercase py-0 text-base h-7 md:h-12 items-center font-semibold text-zinc-200 rounded-md border border-zinc-200;
-  }
 
 
 
