--- a/lib/subtle_web/components/layouts/root.html.heex
+++ b/lib/subtle_web/components/layouts/root.html.heex
@@ -11,7 +11,8 @@
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
   </head>
-  <body class="bg-gradient-to-r from-sky-600 to-sky-800 antialiased">
+<!--  <body class="bg-gradient-to-r from-sky-600 to-sky-800 antialiased"> -->
+  <body class="bg-gradient-to-r from-slate-700 to-slate-900 antialiased">
     <%= @inner_content %>
   </body>
 </html>
